--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <html lang="ja">
   <head>
+    <style>
+      h1 {
+        color: red;
+      }
+    </style>
     <!-- ページエンコーディング -->
     <meta charset="utf-8">
     <!-- 文書の説明 -->
@@ -35,7 +40,7 @@
 
     <section>
       <img src="./img/icon.png" width="140" height="140" alt="icon">
-      <h1>大橋正明</h1>
+      <h1>notready</h1>
       <p>UI/UXデザイナー見習いです。</p>
     </section>
 
