スタイルシートを別ファイルに分割

--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 
 <html lang="ja">
   <head>
+    <!--
     <style>
-      h1 {
-        color: red;
+      /*
+      コメント行複数行も可
+       */
+      h1 { /* セレクタ */
+        color: red; /* 属性 */
       }
     </style>
+    -->
+    <!-- cssのリンク -->
+    <link rel="stylesheet" href="css/styles.css">
+
     <!-- ページエンコーディング -->
     <meta charset="utf-8">
     <!-- 文書の説明 -->
