アイコンにボーダーと影を指定

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </header>
 
     <section>
-      <img class="icon" src="./img/icon.png" width="140" height="140" alt="icon">
+      <img class="icon" src="./img/work1.png" width="140" height="140" alt="icon">
       <h1>notready</h1>
       <p>UI/UXデザイナー見習いです。</p>
     </section>
