--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           li: (l)ist (i)tem
         -->
         <ul>
-          <li>
+          <li class="current">
             <a href="index.html">HOME</a>
           </li>
           <li>
