about.htmlにスタイルシートを適応

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <meta name="discription" content="notreadyについて">
     <!-- faviconの設定 -->
     <link rel="icon" href="./img/m.ico">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>notreadyについて</title>
   </head>
   <body>
@@ -25,19 +26,20 @@
           <li>
             <a href="index.html">HOME</a>
           </li>
-          <li>
+          <li class="current">
             <a href="about.html">ABOUT</a>
           </li>
         </ul>
       </nav>
-      <img src="./img/header.png" width="400" height="130" alt="ヘッダ画像">
     </header>
 
-    <section>
-      <img src="./img/icon.png" width="140" height="140" alt="icon">
-      <h1>notreadyの紹介です。</h1>
-      <p>notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。</p>
-    </section>
+    <div class="works">
+      <section>
+        <img src="./img/icon.png" width="140" height="140" alt="icon">
+        <h1>notreadyの紹介です。</h1>
+        <p>notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。</p>
+      </section>
+    </div>
 
     <footer>
       <ul>
