about.htmlのsectionセクションの体裁を指定

--- a/about.html
+++ b/about.html
@@ -33,13 +33,11 @@
       </nav>
     </header>
 
-    <div class="works">
-      <section>
-        <img src="./img/icon.png" width="140" height="140" alt="icon">
-        <h1>notreadyの紹介です。</h1>
-        <p>notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。</p>
-      </section>
-    </div>
+    <section class="about">
+      <img src="./img/icon.png" width="140" height="140" alt="icon">
+      <h1>notreadyの紹介です。</h1>
+      <p>notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。notreadyの紹介です。</p>
+    </section>
 
     <footer>
       <ul>
